modules = [
  '00000',
  '00010',
  '00011',
  '00012',
  '00020',
  '00021',
  '00022',
  '00023',
  '00024',
  '00030',
  '00040',
  '00050',
  '00060',
  '00070',
  '00100',
  '00101',
  '00110',
  '00111',
  '00112',
  '00120',
  '00121',
  '00122',
  '00124',
  '00125',
  '00130',
  '00131',
  '00132',
  '00133',
  '00140',
  '00141',
  '00150',
  '00160',
  '00170',
  '00200',
  '00300',
  '00400',
  '00500',
  '00501',
  '00600',
  '00610',
  '00620',
  '00900',
  '01000',
  '01100',
  '01300',
  '01400',
  '01410',
  '01411',
  '01420',
  '01421',
  '01430',
  '01440',
  '01441',
  '01450',
  '01460',
  '01470',
  '01500',
  '01600',
  '01700',
  '01710',
  '01711',
  '01720',
  '01722',
  '01730',
  '01731',
  '01740',
  '01750',
  '01760',
  '01770',
  '01800',
  '02000',
  '02100',
  '02400',
  '02410',
  '02500',
  '02501',
  '02600',
  '02611',
  '02612',
  '02630',
  '02711',
  '02811',
  '03000',
  '03100',
  '03200',
  '03500',
  '03610',
  '03710',
  '03711',
  '03730',
  '03800',
  '03910',
  '04010',
  '04110',
  '04300',
  '04400',
  '04410',
  '04420',
  '04430',
  '04500',
  '04510',
  '04520',
  '04521',
  '04522',
  '04700',
  '04710',
  '04711',
  '04800',
  '04900',
  '05000',
  '05100',
  '05200',
  '05300',
  '05400',
  '05500',
  '05600',
  '05700',
  '05800',
  '06000',
  '06050',
  '06060',
  '06100',
  '06211',
  '06212',
  '06213',
  '06221',
  '06222',
  '06223',
  '06231',
  '06232',
  '06233',
  '06241',
  '06242',
  '06243',
  '06300',
  '06400',
  '06500',
  '06600',
  '06700',
  '06800',
  '06900',
  '07000',
  '07100',
  '07200',
  '07300',
  '07350',
  '07400',
  '07401',
  '07500',
  '07700',
  '07701',
  '07800',
  '07801',
  '07900',
  '08000',
  '08100',
  '08200',
  '08300',
  '08400',
  '08500',
  '08600',
  '08700',
  '08800',
  '08900',
  '09000',
  '09100',
  '09200',
  '09300',
  '09400',
  '09500',
  '09600',
  '09700',
  '09710',
  '09720',
  '09800',
  '09810',
  '09820',
  '09900',
  '10000',
  '10100',
  '10200',
  '10300',
  '10400',
  '10410',
  '10420',
  '10500',
  '10600',
  '10700',
  '10800',
  '10810',
  '10820',
  '10830',
  '10840',
  '10870',
  '10900',
  '10901',
  '11000',
  '11100',
  '11200',
  '11300',
  '11400',
  '11500',
  '11600',
  '11700',
  '11750',
  '11760',
  '11800',
  '11850',
  '11860',
  '11900',
  '12000',
  '12001',
  '12100',
  '12200',
  '12300',
  '12400',
  '12500',
  '12600',
  '12700',
  '12800',
  '12900',
  '13000',
  '13100',
  '13200',
  '13300',
  '13400',
  '13500',
  '13600',
  '13711',
  '13712',
  '13713',
  '13721',
  '13722',
  '13723',
  '13731',
  '13732',
  '13733',
  '13741',
  '13742',
  '13743',
  '13751',
  '13752',
  '13753',
  '13761',
  '13762',
  '13763',
  '13771',
  '13772',
  '13773',
  '13781',
  '13782',
  '13783',
  '13800',
  '13900',
  '14000',
  '14100',
  '14400',
  '14500',
  '14600',
  '14700',
  '14800',
  '14900',
  '15000',
  '15100',
  '15200',
  '15300',
  '15310',
  '15400',
  '15500',
  '15600',
  '15700',
  '15900',
  '15910',
  '16000',
  '16100',
  '16200',
  '16300',
  '16400',
  '16500',
  '16600',
  '16700',
  '16800',
  '16801',
  '16900',
  '17010',
  '17020',
  '17030',
  '17040',
  '17200',
  '17210',
  '17220',
  '17225',
  '17230',
  '17300',
  '17400',
  '17500',
  '17600',
  '17700',
  '17800',
  '17900',
  '18000',
  '18100',
  '18200',
  '18300',
  '18400',
  '18500',
  '18600',
  '18700',
  '18800',
  '18900',
  '19000',
  '19100',
  '19200',
  '19300',
  '19500',
  '19600',
  '19700',
  '19800',
  '19900',
  '20011',
  '20012',
  '20013',
  '20200',
  '20300',
  '20400',
  '20500',
  '20510',
  '20600',
  '20710',
  '20711',
  '20712',
  '20720',
  '20800',
  '20900',
  '21000',
  '21100',
  '21200',
  '21300',
  '21310',
  '21400',
  '21420',
  '21500',
  '21501',
  '21600',
  '21700',
  '21800',
  '22000',
  '22001',
  '22100',
  '22200',
  '22300',
  '22301',
  '22400',
  '22500',
  '22600',
  '22700',
  '22911',
  '22921',
  '22931',
  '22941',
  '22951',
  '23001',
  '23002',
  '23003',
  '23100',
  '23200',
  '23300',
  '23400',
  '23500',
  '23600',
  '23700',
  '23900',
  '24100',
  '24200',
  '24300',
  '24410',
  '24420',
  '24500',
  '24600',
  '24700',
  '24800',
  '24900',
  '25000',
  '25100',
  '25200',
  '25300',
  '25400',
  '25500',
  '25600',
  '25700',
  '25800',
  '25900',
  '26000',
  '26100',
  '26200',
  '26300',
  '26401',
  '26402',
  '26403',
  '26500',
  '26600',
  '26610',
  '26700',
  '26800',
  '26900',
  '27000',
  '27100',
  '27200',
  '27300',
  '27400',
  '27500',
  '27600',
  '27700',
  '27800',
  '27900',
  '28000',
  '28100',
  '28200',
  '28300',
  '28400',
  '28501',
  '28502',
  '28503',
  '28504',
  '28505',
  '28506',
  '28600',
  '28700',
  '28800',
  '28900',
  '29000',
  '29100',
  '29200',
  '29311',
  '29312',
  '29313',
  '29321',
  '29322',
  '29323',
  '29331',
  '29332',
  '29333',
  '29341',
  '29342',
  '29343',
  '29411',
  '29412',
  '29413',
  '29421',
  '29422',
  '29423',
  '29431',
  '29432',
  '29433',
  '29441',
  '29442',
  '29443',
  '29451',
  '29452',
  '29453',
  '29461',
  '29462',
  '29463',
  '29471',
  '29472',
  '29473',
  '29481',
  '29482',
  '29483',
  '29511',
  '29512',
  '29513',
  '29521',
  '29522',
  '29523',
  '29531',
  '29532',
  '29533',
  '29541',
  '29542',
  '29543',
  '29600',
  '29700',
  '29800',
  '29910',
  '29920',
  '29930',
  '29940',
  '30000',
  '30120',
  '30420',
  '30500',
  '30600',
  '30700',
  '30901',
  '30902',
  '30903',
  '30904',
  '30905',
  '30906',
  '31000',
  '31100',
  '31200',
  '31300',
  '31400',
  '31700',
  '31800',
  '31900',
  '32000',
  '32010',
  '32020',
  '32030',
  '32031',
  '32040',
  '32041',
  '32050',
  '32060',
  '32070',
  '32100',
  '32200',
  '32300',
  '32410',
  '32420',
  '32500',
  '99999',
]

if unrar_dep.found()
  modules += '23800'
endif

foreach m : modules
  shared_library(
    'module_@0@'.format(m),
    'module_@0@.c'.format(m),
    c_args: '-DMODULE_INTERFACE_VERSION_CURRENT=700',
    name_prefix: '',
    dependencies: libhashcat_dep,
    install: true,
    install_dir: get_option('libdir') / 'hashcat' / 'modules',
  )
endforeach
